--- a/package.json
+++ b/package.json
@@ -8,7 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@types/vuelidate": "^0.7.16",
+    "@vuelidate/core": "^2.0.0",
+    "@vuelidate/validators": "^2.0.0",
     "core-js": "^3.8.3",
+    "pinia": "^2.0.32",
+    "primeicons": "^6.0.1",
+    "primevue": "^3.23.0",
     "vue": "^3.2.13"
   },
   "devDependencies": {
