--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@types/vuelidate": "^0.7.16",
     "@vuelidate/core": "^2.0.0",
     "@vuelidate/validators": "^2.0.0",
+    "@vueuse/motion": "^2.0.0-beta.12",
     "core-js": "^3.8.3",
+    "dayjs": "^1.11.7",
     "pinia": "^2.0.32",
     "primeicons": "^6.0.1",
     "primevue": "^3.23.0",
