--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@vuelidate/core": "^2.0.0",
     "@vuelidate/validators": "^2.0.0",
     "@vueuse/motion": "^2.0.0-beta.12",
+    "axios": "^1.3.3",
     "core-js": "^3.8.3",
     "dayjs": "^1.11.7",
     "pinia": "^2.0.32",
