- Edited action yml

--- a/.github/workflows/onpush.yml
+++ b/.github/workflows/onpush.yml
@@ -4,7 +4,7 @@ on:
     branches: 
       - main
   workflow_dispatch: {}
-  
+
 jobs:
   update:
     name: update gh-pages
@@ -15,9 +15,10 @@ jobs:
         uses: actions/setup-node@v3
         with: 
           node-version: '18'
+          cache: 'npm'
       - name: Install deps
         run: |
-          npm install 
+          npm ci 
       - name: Build project
         run: |
           npm run build
